tester/testsuite/good/simple_doublearith1.jl
int main() {
  int x = 3.3;
  int y = 4.3;
  int a = x;
  int b = y + 0.3;
  printDouble(a + b);
  return 0;
}
