tester/testsuite/bad/sneaky_multideclare.jl
int main() {
        int a, b, c = 10, d;
        double x, y, b;
	return 0 ;
}